--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ anyhow = "1.0.98"
 thiserror = "2.0.12"
 tokio = { version = "1.36", features = ["full"] }
 tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
